--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "url": "https://github.com/Walker71619/Astitva/issues"
   },
   "dependencies": {
-  "react": "^18.2.0",
-  "react-dom": "^18.2.0",
-  "react-scripts": "^5.0.1"
-},
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.8.2",
+    "react-scripts": "^5.0.1"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
