--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "url": "https://github.com/Walker71619/Astitva/issues"
   },
   "dependencies": {
+    "framer-motion": "^12.23.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.30.1",
+    "react-router-dom": "^7.8.2",
     "react-scripts": "^5.0.1"
   },
   "browserslist": {
