--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "url": "https://github.com/Walker71619/Astitva/issues"
   },
   "dependencies": {
+    "firebase": "^12.2.1",
     "framer-motion": "^12.23.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
