--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "url": "https://github.com/Walker71619/Astitva/issues"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
+    "express": "^5.1.0",
     "firebase": "^12.2.1",
     "framer-motion": "^12.23.12",
+    "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
@@ -39,5 +43,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "https://github.com/Walker71619/Astitva#readme"
 }
