--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,31 +1,18 @@
 {
-  "name": "astitva",
+  "name": "astitva-frontend",
   "version": "1.0.0",
-  "description": "// Main README for Astitva",
-  "main": "index.js",
+  "private": true,
+  "description": "Frontend for Astitva",
+  "main": "src/index.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Walker71619/Astitva.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Walker71619/Astitva/issues"
-  },
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.2",
-    "express": "^5.1.0",
     "firebase": "^12.2.1",
     "framer-motion": "^12.23.12",
-    "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
@@ -43,6 +30,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "homepage": "https://github.com/Walker71619/Astitva#readme"
+  }
 }
